app/static/css/adminManagement.css
h1, label{
  text-align: center;
}

select {
  position: relative;
  margin-bottom: 50px;
}

#header {
  margin-bottom: 30px;
}

.form-group {
  margin-bottom: 30px;
}

.btn {
    width: 25%;
}

 #ManageAdminInfo {
   font-size: 18px;
 }

